[gd_scene load_steps=21 format=3 uid="uid://dhpyvay3tx2wq"]

[ext_resource type="Script" uid="uid://dy4jgu07lxq0b" path="res://Game/Player/player.gd" id="1_s3asc"]
[ext_resource type="Shader" uid="uid://bkrpjsvkuwwsg" path="res://Shaders/OutlineShader.gdshader" id="2_ch4ko"]
[ext_resource type="Texture2D" uid="uid://bvhfkcqiphtes" path="res://Assets/Sprites/Characters/IdleAnim.png" id="2_s3asc"]
[ext_resource type="Texture2D" uid="uid://blbc00gsuhdsy" path="res://Assets/Sprites/Characters/RunAnim.png" id="3_letr6"]
[ext_resource type="Script" uid="uid://cjmxk6hxcnixy" path="res://HealthSystem/hit_box.gd" id="5_ch4ko"]
[ext_resource type="Script" uid="uid://w5o6lb26qbow" path="res://HealthSystem/health.gd" id="5_segth"]
[ext_resource type="Texture2D" uid="uid://fw05hkyhudvs" path="res://Assets/Sprites/Characters/SwingAnim.png" id="5_vh1aq"]
[ext_resource type="PackedScene" uid="uid://dfdc6vokw7rtx" path="res://HealthSystem/hurt_box.tscn" id="7_ch4ko"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vh1aq"]
shader = ExtResource("2_ch4ko")
shader_parameter/outline_color = Vector4(0, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ddeg"]
atlas = ExtResource("2_s3asc")
region = Rect2(0, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_db2hk"]
atlas = ExtResource("2_s3asc")
region = Rect2(15, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0m6d"]
atlas = ExtResource("3_letr6")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwver"]
atlas = ExtResource("3_letr6")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfw5o"]
atlas = ExtResource("5_vh1aq")
region = Rect2(0, 0, 30, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlpas"]
atlas = ExtResource("5_vh1aq")
region = Rect2(0, 19, 30, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_akrrf"]
atlas = ExtResource("5_vh1aq")
region = Rect2(0, 38, 30, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_segth"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ddeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db2hk")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0m6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwver")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfw5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlpas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akrrf")
}],
"loop": false,
"name": &"Swing",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s3asc"]
radius = 4.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch4ko"]
size = Vector2(12.5, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db2hk"]
size = Vector2(10, 16)

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_s3asc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vh1aq")
sprite_frames = SubResource("SpriteFrames_segth")
animation = &"Run"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_s3asc")

[node name="Health" type="Node" parent="."]
script = ExtResource("5_segth")
max_health = 1
health = 1
metadata/_custom_type_script = "uid://w5o6lb26qbow"

[node name="SwingCoolDown" type="Timer" parent="."]
one_shot = true

[node name="BatHitBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource("5_ch4ko")
metadata/_custom_type_script = "uid://cjmxk6hxcnixy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatHitBox"]
position = Vector2(6.75, 1.5)
shape = SubResource("RectangleShape2D_ch4ko")
disabled = true

[node name="HurtBox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("7_ch4ko")]
visible = false
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_db2hk")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="SwingCoolDown" to="." method="_on_swing_cool_down_timeout"]
